<?xml version="1.0"?>
<package format="3">
  <name>controller_switcher</name>
  <version>0.0.1</version>
  <description>Controller switcher node</description>

  <maintainer email="you@email.com">misys</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>  <!-- OK -->
  <buildtool_depend>ament_python</buildtool_depend> <!-- 반드시 추가 -->

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>ackermann_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>   <!-- 핵심 -->
  </export>
</package>
